--- a/app/Base.lproj/Main.storyboard
+++ b/app/Base.lproj/Main.storyboard
@@ -18,17 +18,37 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CPW-eu-jdx">
-                                <rect key="frame" x="138" y="472" width="138" height="35"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Screen Shot 2019-08-17 at 9.28.33 PM" translatesAutoresizingMaskIntoConstraints="NO" id="JvV-jz-z7X">
+                                <rect key="frame" x="47" y="287" width="320" height="332"/>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CPW-eu-jdx">
+                                <rect key="frame" x="176" y="657" width="62" height="48"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="30"/>
                                 <state key="normal" title="Start"/>
                                 <connections>
                                     <action selector="startButton:" destination="PGj-CL-06p" eventType="touchUpInside" id="3KE-JV-TU1"/>
                                 </connections>
                             </button>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="Learn who to vote for now!" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="TJO-Ub-9rv">
+                                <rect key="frame" x="85.5" y="182" width="243" height="32"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="32" id="SZG-rW-1pm"/>
+                                    <constraint firstAttribute="width" constant="243" id="aEx-Y1-lJ4"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="CPW-eu-jdx" firstAttribute="top" secondItem="JvV-jz-z7X" secondAttribute="bottom" constant="38" id="8rD-4h-ndN"/>
+                            <constraint firstItem="JvV-jz-z7X" firstAttribute="centerX" secondItem="DkX-q2-hV6" secondAttribute="centerX" id="BpZ-9V-7Qh"/>
+                            <constraint firstItem="JvV-jz-z7X" firstAttribute="top" secondItem="TJO-Ub-9rv" secondAttribute="bottom" constant="73" id="Ge5-xT-vBl"/>
+                            <constraint firstItem="TJO-Ub-9rv" firstAttribute="centerX" secondItem="DkX-q2-hV6" secondAttribute="centerX" id="LcC-Xn-1qh"/>
+                            <constraint firstItem="CPW-eu-jdx" firstAttribute="centerX" secondItem="DkX-q2-hV6" secondAttribute="centerX" id="U2z-V3-ddm"/>
+                            <constraint firstItem="JvV-jz-z7X" firstAttribute="centerY" secondItem="DkX-q2-hV6" secondAttribute="centerY" id="aws-cs-RHH"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="DkX-q2-hV6"/>
                     </view>
                     <connections>
@@ -47,8 +67,12 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cqd-7e-Fb1">
-                                <rect key="frame" x="172" y="430" width="71" height="36"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cqd-7e-Fb1">
+                                <rect key="frame" x="86" y="156" width="261" height="583"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="583" id="IVD-NZ-T9l"/>
+                                    <constraint firstAttribute="width" constant="261" id="vVm-w2-qhG"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="30"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -61,6 +85,16 @@
                                     <action selector="homeButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="mLM-ZU-Wwc"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Swipe right to agree. Swipe left to disagree." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4Pk-eL-aQ0">
+                                <rect key="frame" x="111" y="747" width="192" height="48"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="48" id="7kp-pr-HzR"/>
+                                    <constraint firstAttribute="width" constant="192" id="AbI-40-jD8"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" weight="thin" pointSize="20"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <gestureRecognizers/>
@@ -68,7 +102,9 @@
                             <constraint firstItem="cqd-7e-Fb1" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" id="B0V-fd-Zds"/>
                             <constraint firstItem="X4d-nl-0YT" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="25" id="dGN-Yq-RJR"/>
                             <constraint firstItem="cqd-7e-Fb1" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="dcJ-Vu-OT4"/>
+                            <constraint firstItem="4Pk-eL-aQ0" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="hEa-1m-rPj"/>
                             <constraint firstItem="X4d-nl-0YT" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="30" id="lfx-9L-WKp"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="4Pk-eL-aQ0" secondAttribute="bottom" constant="67" id="yLJ-yr-ZAg"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <connections>
@@ -93,7 +129,7 @@
                     </connections>
                 </swipeGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="-49" y="13"/>
+            <point key="canvasLocation" x="-49.275362318840585" y="12.723214285714285"/>
         </scene>
         <!--End App View Controller-->
         <scene sceneID="Zcf-Or-FBA">
@@ -147,4 +183,7 @@
             <point key="canvasLocation" x="743.47826086956525" y="22.767857142857142"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Screen Shot 2019-08-17 at 9.28.33 PM" width="320" height="332"/>
+    </resources>
 </document>
