--- a/app/Base.lproj/LaunchScreen.storyboard
+++ b/app/Base.lproj/LaunchScreen.storyboard
@@ -18,19 +18,19 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Screen Shot 2019-08-17 at 9.28.33 PM" translatesAutoresizingMaskIntoConstraints="NO" id="U0k-Un-JYi">
-                                <rect key="frame" x="65" y="238" width="285" height="205"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" image="newlogo" translatesAutoresizingMaskIntoConstraints="NO" id="U0k-Un-JYi">
+                                <rect key="frame" x="39" y="238" width="336" height="205"/>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="L O A D I N G ..." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WcW-T0-UOP">
-                                <rect key="frame" x="157" y="444" width="119" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" image="Screen Shot 2019-08-19 at 12.25.14 AM" translatesAutoresizingMaskIntoConstraints="NO" id="496-L9-w1b">
+                                <rect key="frame" x="-163" y="440" width="740" height="128"/>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="U0k-Un-JYi" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="ARU-iu-8pt"/>
+                            <constraint firstItem="496-L9-w1b" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="CNi-m9-ZW5"/>
+                            <constraint firstItem="U0k-Un-JYi" firstAttribute="baseline" secondItem="496-L9-w1b" secondAttribute="firstBaseline" constant="8" symbolType="layoutAnchor" id="VIO-Gp-68p"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
@@ -40,6 +40,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="Screen Shot 2019-08-17 at 9.28.33 PM" width="320" height="332"/>
+        <image name="Screen Shot 2019-08-19 at 12.25.14 AM" width="740" height="268"/>
+        <image name="newlogo" width="336" height="370"/>
     </resources>
 </document>
